@@ -29,8 +29,8 @@ class TextHelperTest < Test::Unit::TestCase
       assert_equal "\354\225\210\353\205\225\355...", truncate("\354\225\210\353\205\225\355\225\230\354\204\270\354\232\224", 10) 
     end
     with_kcode 'u' do
-      assert_equal "\354\225\204\353\246\254\353\236\221 \354\225\204\353\246\254\353\236 ...",
-        truncate("\354\225\204\353\246\254\353\236\221 \354\225\204\353\246\254\353\236 \354\225\204\353\235\274\353\246\254\354\230\244", 10)
+      assert_equal "\354\225\204\353\246\254\353\236\221 \354\225\204\353\246\254 ...",
+        truncate("\354\225\204\353\246\254\353\236\221 \354\225\204\353\246\254 \354\225\204\353\235\274\353\246\254\354\230\244", 10)
     end
   end
   
